--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,16 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
-    
-  <display-name>BloggerClientREST</display-name>
+<web-app version="3.1" 
+    xmlns="http://xmlns.jcp.org/xml/ns/javaee" 
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+    xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
+        
+    <display-name>BloggerClientREST</display-name>
 
-  <session-config>
-    <session-timeout>30</session-timeout>
-  </session-config>
+    <session-config>
+        <session-timeout>30</session-timeout>
+    </session-config>
 
-  <jsp-config>
-    <jsp-property-group>
-        <url-pattern>*.jsp</url-pattern>
-        <page-encoding>UTF-8</page-encoding>
-    </jsp-property-group>
-  </jsp-config>
+    <jsp-config>
+        <jsp-property-group>
+            <url-pattern>*.jsp</url-pattern>
+            <page-encoding>UTF-8</page-encoding>
+        </jsp-property-group>
+    </jsp-config>
+
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
+
+    <servlet>
+        <servlet-name>post-index</servlet-name>
+        <jsp-file>/WEB-INF/pages/posts/index.jsp</jsp-file>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>post-index</servlet-name>
+        <url-pattern>/posts</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>post-index</servlet-name>
+        <url-pattern>/posts/index</url-pattern>
+    </servlet-mapping>
 </web-app>
