--- a/.gitignore
+++ b/.gitignore
@@ -70,7 +70,7 @@ local.properties
 ### Java-Web ###
 ## ignoring target file
 target/
-target/*
+webapps
 
 ### NetBeans ###
 **/nbproject/private/
@@ -91,4 +91,32 @@ nbdist/
 !.vscode/extensions.json
 *.code-workspace
 
-# End of https://www.toptal.com/developers/gitignore/api/java-web,vscode,eclipse,netbeans
+### Intellij ###
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+.idea/
+
+# CMake
+cmake-build-*/
+
+# File-based project format
+*.iws
+
+# IntelliJ
+out/
+
+# mpeltonen/sbt-idea plugin
+.idea_modules/
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
+blogger-client.iml
+
+# Docker TomCat
+tomcat/
