--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,11 @@
-version: "3"
+version: "3.7"
 
-services: 
+services:
   servidor:
     image: tomcat:9.0
+    container_name: restart blogger-client-rest
     ports:
       - 80:8080
-    volumes: 
-      - ./target:/usr/local/tomcat/webapps
+    volumes:
+      - ./tomcat/webapps:/usr/local/tomcat/webapps
+      - ./tomcat/logs/:/usr/local/tomcat/logs/
