--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="3.1" 
-    xmlns="http://xmlns.jcp.org/xml/ns/javaee" 
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-    xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
+<web-app version="3.1">
         
     <display-name>BloggerClientREST</display-name>
 
@@ -20,15 +17,6 @@
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
-
-    <servlet>
-        <servlet-name>blog-index</servlet-name>
-        <jsp-file>/WEB-INF/pages/blog/index.jsp</jsp-file>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>blog-index</servlet-name>
-        <url-pattern>/blogs/index</url-pattern>
-    </servlet-mapping>
 
     <servlet>
         <servlet-name>post-new</servlet-name>
